<resources>
    <string name="app_name">AwareWolf</string>
    <string name="action_info">Informacje o mnie</string>
    <string name="action_contact">Skontaktuj się ze mną</string>
    <string name="action_home">Ekran główny</string>
    <string name="button_start_text">Rozważ</string>
    <string name="user_good_choices">ugc</string>
    <string name="user_bad_choices">ubc</string>
    <string name="message_main">Co wybierasz Ty?</string>

    <string name="picture">Zdjęcie</string>
    <string name="description_info">Info</string>
    <string name="request_permission">Zezwolić aplkiacji na dostęp do aparatu?</string>
    <string name="camera_error">To urządzenie posiada niekompatybilny system</string>
    <string name="config_error">Błąd</string>
    <string name="photo_success">Zapisano plik: </string>
    <string name="switch_internal_storage">ROM</string>
    <string name="switch_external_storage">SD</string>
    <string name="switch_storage_label">Zapis na karcie SD</string>
    <string name="day">dzień</string>
    <string name="week">tydzień</string>
    <string name="month">miesiąc</string>
    <string name="water">Woda</string>
    <string name="gas">Gaz</string>
    <string name="plastic">Plastik</string>
    <string name="fuel">Paliwo</string>
    <string name="routine_teeth_brush">Zakręcanie wody podczas mycia zębów</string>
    <string name="routine_bicycling_to_work">Dojazd do pracy na rowerze</string>
    <string name="routine_no_plastic_bags">Pozbycie się plastikowych toreb</string>
    <string name="delete">Usuń</string>
    <string name="title">Nazwa</string>
    <string name="content">Zawartość</string>
    <string name="save">Zapisz</string>
    <string name="search">Szukaj</string>
    <string name="enter_title">Nazwa rutyny</string>
    <string name="enter_content">Podaj ilość zasobu</string>
    <string name="resource_spinner_prompt">Wybierz zasób</string>
    <string name="please_enter_title">Wprowadź nazwę</string>
    <string name="please_enter_amount">Wprowadź wartosć</string>
    <string name="please_select_category">Wybierz kategorie</string>
    <string name="frequency_spinner_prompt">Wybierz częstotliwość</string>
    <string name="frequency_spinner">Częstotliwość</string>
    <string name="resource_spinner">Oszczędzany zasób</string>
    <string name="tabbar_button_description">Shows gallery of potential futures</string>
    <string name="camera_button_description">Allows you to take photos</string>
    <string name="routines_button_description">Your eco routines manager</string>
    <string name="storage_preference">storage_pref</string>
    <string name="store_on_sd">SD</string>
    <string name="please_select_frequency">Zaznacz kategorię!</string>
    <string name="your_routines">Twoje nawyki</string>
    <string name="definition_button_description">Gives random definition</string>
    <string name="show_info_dialog_title">Czy ta definicja pasuje?</string>
    <string name="positive_answer">Tak</string>
    <string name="negative_answer">Nie</string>
    <string name="load_new_definition_message">Ładuję nową definicję</string>
    <string name="no_more_definition_message">Nie mam więcej :(</string>
</resources>
