<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.meetapp.ecoapp.AutoFitTextureView
            android:id="@+id/texture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    <FrameLayout
            android:id="@+id/control"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="15dp"
            android:layout_alignBottom="@id/texture"
            android:background="@color/primary"
            android:orientation="horizontal">

        <ImageButton
                android:id="@+id/picture"
                android:contentDescription="@string/description_info"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/cam_icon" />


        <ToggleButton
                android:id="@+id/storage_toggle"
                android:showText="true"
                android:textOff="@string/switch_internal_storage"
                android:textOn="@string/switch_external_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"/>


    </FrameLayout>

</RelativeLayout>